// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows size override 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <SvgXml
      height={48}
      width={48}
      xml="<g />"
    />
  </View>
</View>
`;

exports[`renders different color for secondary 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <SvgXml
      height={24}
      width={24}
      xml="<g />"
    />
  </View>
</View>
`;

exports[`renders the icon in a touchable opacity 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Label"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <SvgXml
      height={24}
      width={24}
      xml="<g />"
    />
  </View>
</View>
`;
